# kickitup-cpp

./: .gitignore  CMakeLists.txt  GameConfig.cpp  GameConfig.h  KickItUp.cpp  KickitUp-cpp.sln  KickitUp-cpp.vcxproj  Log.cpp  Log.h  Main.cpp  common.h  kiu.cfg
data/: CMakeLists.txt  Ksf.cpp  Song.cpp  SongMgr.cpp  SongMgr.h
input/: CMakeLists.txt  InputEnum.h  InputManager.cpp  KeyboardDevice.cpp
sound/: CMakeLists.txt  FmodSound.cpp  FmodSound.h  FmodSoundStore.cpp  FmodSoundStore.h
stage/: CMakeLists.txt  Context.cpp  Context.h  StageConfig.cpp  StageConfig.h  StageNormal.cpp  StageNormal.h  StageSelect.cpp  StageSelect.h  StageStore.cpp  StageStore.h  StageTitle.cpp  StageTitle.h
util/: CMakeLists.txt  Dir.cpp  File.cpp  Timer.h
video/: Animation.cpp  Animation.h  CMakeLists.txt  Dim.h  SDLSurface.cpp  SDLSurface.h  SDLSurfaceStore.cpp  SDLSurfaceStore.h  Surface.h  SurfaceStore.h  ZoomAnimation.cpp  ZoomAnimation.h
